# stand-up-timer

./: README.md  index.html  package.json
docs/: index.html
public/: bubble.html  reminder.html
src/: app.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
